k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sync-service
spec:
  type: ClusterIP
  selector:
    app: sync-service
  ports:
    - port: 80
      targetPort: 8080
